# MusicPlayer---Deed

./: .gitignore  CMakeLists.txt  clickableslider.cpp  clickableslider.h  coverartmanager.cpp  coverartmanager.h  gstplayerbackend.cpp  gstplayerbackend.h  lyricsmanager.cpp  lyricsmanager.h  main.cpp  mprisservice.cpp  mprisservice.h  playbacknotificationmanager.cpp  playbacknotificationmanager.h  playerwindow.cpp  playerwindow.h  playlistwidget.cpp  playlistwidget.h  trackmetadata.cpp  trackmetadata.h
